spring-chat/src/main/java/com/example/springchat/error/NewConversationException.java
package com.example.springchat.error;

public class NewConversationException extends Exception{

    public NewConversationException(String msg) {
        super(msg);
    }
}
